--- a/main.html
+++ b/main.html
@@ -26,11 +26,11 @@
       </div>
       <div class="Icons">
         <i class="fa-solid fa-mobile-screen-button"></i>
-        <p>+201066917464</p>
+        <p>+201012345678</p>
       </div>
       <div class="Icons">
         <i class="fa-solid fa-envelope"></i>
-        <p>momohadi1382003@gmail.com</p>
+        <p>moelhadi123@gmail.com</p>
       </div>
       <div class="Icons">
         <i class="fa-solid fa-w"></i>
